# sipXfreeSwitchCustomExt

./: .project  configure.ac  sipxfreeswitchcustomext.spec.in
config-plugin/: Makefile.am
config-plugin/plugin/: CodeMirror.script  CustomFreeswitchExtensionsEditExtension.html  CustomFreeswitchExtensionsEditExtension.page  CustomFreeswitchExtensionsEditExtension.properties  CustomFreeswitchExtensionsHook.html  CustomFreeswitchExtensionsHook.page  CustomFreeswitchExtensionsHook.properties  CustomFreeswitchExtensionsPage.html  CustomFreeswitchExtensionsPage.page  CustomFreeswitchExtensionsPage.properties  CustomFreeswitchExtensionsPanel.html  CustomFreeswitchExtensionsPanel.properties  FreeSwitchCustomExtensionsHook.html  FreeSwitchCustomExtensionsHook.page  FreeSwitchCustomExtensionsHook.properties  FreeSwitchCustomExtensionsPage.html  FreeSwitchCustomExtensionsPage.page  FreeSwitchCustomExtensionsPage.properties
config-plugin/src/: freeswitchcustomextensions.properties  sipxplugin.beans.xml
config-plugin/src/org/sipfoundry/sipxconfig/freeswitchcustomextensions/: CustomFreeswitchExtension.java  CustomFreeswitchExtensionsConfig.java  CustomFreeswitchExtensionsContext.java  CustomFreeswitchExtensionsContextImpl.java  CustomFreeswitchExtensionsSettings.java  FreeSwitchCustomExtension.java  FreeSwitchCustomExtensionsContext.java  FreeSwitchCustomExtensionsContextImpl.java  FreeSwitchCustomExtensionsSettings.java  freeswitchcustomextensions.hbm.xml
config-plugin/src/org/sipfoundry/sipxconfig/web/plugin/: CustomFreeswitchExtensionsEditExtension.java  CustomFreeswitchExtensionsHook.java  CustomFreeswitchExtensionsPage.java  CustomFreeswitchExtensionsPanel.java  FreeSwitchCustomExtensionsHook.java  FreeSwitchCustomExtensionsPage.java  codemirror.css
config-plugin/test/org/sipfoundry/sipxconfig/freeswitchcustomextensions/: CustomFreeswitchExtensionsContextImplTestIntegration.java  FreeSwitchCustomExtensionsContextImplTestIntegration.java
etc/: 00_sipxcustomfse.cf  Makefile.am
etc/freeswitch/: sipXcfse_context.xml.vm
etc/freeswitchcustomextensions/: CustomFreeswitchExtensionsSettings.xml  readme.txt
